Se sube pagina web version 0.1

--- a/index.html
+++ b/index.html
@@ -1,1 +1,67 @@
-<h1>Pagina </h1>
+<!DOCTYPE html>
+<!-- saved from url=(0039)http://getbootstrap.com/examples/cover/ -->
+<html lang="es"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <!-- <link rel="icon" href="http://getbootstrap.com/favicon.ico"> -->
+    <link rel="shortcut icon" type="image/x-icon" href="images/isotipo_color.ico" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" >
+    <link rel="stylesheet" href="css/font-awesome.min.css" />
+
+    <title>Sebastián Terán</title>
+
+
+  </div>
+
+  </head>
+
+  <body>
+    <div id="espacio">
+    </div>
+    <div class="container">
+
+    <div class="cuadro">
+      <div class="text-center">
+        <span class="logo"><img src="images/perfil.jpg" class="img-circle" /></span>
+        <h1>Sebastián Terán</h1>
+        <h3>Ingeniero civil </br> en Informática y Telecomunicaciones </br>Analista de Sistemas</br>
+          <br />
+        <small>
+        CoFundador y Gerente I&D de LookUp.<br />
+        Coordinador de Young Professional IEEE Chile.<br />
+        Web Master IEEE Chile.<br />
+      </small>
+      </h3>
+
+      <a id="iconos" href="https://github.com/seantehe/" class="fa fa-github fa-2x" aria-hidden="true"></a>
+      &nbsp &nbsp
+      <a id="iconos" href="https://twitter.com/sebateranh" class="fa fa-twitter fa-2x" aria-hidden="true"></a>
+      &nbsp &nbsp
+      <a id="iconos" href="https://www.linkedin.com/in/sebastianteran/" class="fa fa-linkedin fa-2x" aria-hidden="true"></a>
+      &nbsp &nbsp
+      <a id="iconos" href="https://t.me/sebateran" class="fa fa-telegram fa-2x" aria-hidden="true"></a>
+      &nbsp &nbsp
+      <a id="iconos" href="mailto:sebastian.teran@ieee.org" class="fa fa-envelope fa-2x" aria-hidden="true"></a>
+
+
+  </div>
+      </div>
+      </div>
+
+
+  <footer>
+    <p class="text-center">
+      Diseñado por Steran, Generado con <cite title="Source Title">Boostrap y fontawesome</cite>
+    </p>
+  </footer>
+
+
+<script src="js/jquery.min.js"></script>
+<script src="js/animacion.js"></script>
+  </body>
+</html>
