Se cambia icono

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="description" content="Pagina Personal Sebastian Teran">
   <meta name="author" content="Sebastian Teran">
   <!-- icono de pagina web -->
-  <link rel="shortcut icon" type="image/x-icon" href="images/isotipo_color.ico" />
+  <link rel="icon" type="image/png" href="images/fantasma.png" />
   <!-- css -->
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="css/bootstrap.min.css">
