--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <div class="cuadro">
       <div class="text-center">
-        <span class="logo"><img src="images/perfil.jpg" class="img-circle" /></span>
+        <span class="logo"><img src="images/perfil.jpg" class="img-circle" width="300px"  /></span>
         <h1>Sebastián Terán</h1>
         <h3>Ingeniero civil </br> en Informática y Telecomunicaciones </br>Analista de Sistemas</br>
           <br />
